--- a/views/my_account.ejs
+++ b/views/my_account.ejs
@@ -129,7 +129,7 @@
 			container.innerText = ' ';
 			container.classList.add('project');
 			let link = document.createElement('a');
-			link.href = 'https://'+location.hostname+'/p/ide/'+project;
+			link.href = 'https://usercontent.'+location.hostname+'/p/ide/'+project;
 			container.innerText = project;
 			let delb = document.createElement('button');
 			delb.innerText = 'Delete';
