--- a/views/view_user.ejs
+++ b/views/view_user.ejs
@@ -123,7 +123,7 @@
 			let container = document.createElement('div');
 			container.classList.add('project');
 			let link = document.createElement('a');
-			link.href = 'https://'+location.hostname+'/p/view/'+user+'/'+project+'/';
+			link.href = 'https://usercontent.'+location.hostname+'/p/view/'+user+'/'+project+'/';
 			container.innerText = project;
 			link.appendChild(container);
 			projects_d.appendChild(link);
